--- a/config/database.yml
+++ b/config/database.yml
@@ -8,8 +8,8 @@ default: &default
   adapter: mysql2
   pool: 5
   timeout: 5000
-  username: notes
-  database: notes
+  username: wedding
+  database: wedding
 
 development:
   <<: *default
